--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -11,7 +11,7 @@
   [serverInput]="server"
   [testInput]="i>5"
 >
-  <div>the child nodes passed to {{server.sometext}}{{server.count}}</div>
+  <div #childDiv>the child nodes passed to {{server.sometext}}{{server.count}}</div>
 </app-server>
 
 <p>{{ serverTextAdded }}</p>
