how EventEmitters can be used along with a service

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -6,4 +6,5 @@
   <div class="col-sm-2">
       <input type="button" (click)="onEnd()" name="stop" value="Stop"/>
   </div>
+  {{alertMessage}}
 </div>
