added a personalDetails component for studying forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
 
   <hr>
   <app-active-inactive-users></app-active-inactive-users>
+
+  <hr>
+  <app-personal-details></app-personal-details>
 </div>
 <!--
 
