implement custom pipes

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -2,6 +2,6 @@
   [ngStyle]="{ backgroundColor: getColor() }"
   [ngClass]="{ online: availability === 'online'}"
 >
-<p>I'm component to get data from server: {{serverInput.count}}|{{serverInput.sometext}} .</p>
+<p>Server Component: {{serverInput.count}}.</p>
 <ng-content></ng-content>
 </div>
