--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -18,6 +18,15 @@
     [disabled]="!allowNewServer" 
     value="Add Server"
   >
+  <p *ngIf="!allowNewServer; else buttonEnabledText" style="margin-left: 12px;">button disabled</p>
+  <ng-template #buttonEnabledText>
+    <p style="margin-left: 12px;">button enabled</p>
+  </ng-template>
+  <input 
+    type="button" 
+    value="Save servers"
+    (click)="postServers()"
+  >
 </form>
 <app-server 
   *ngFor="let server of servers; let i = index;" [ngClass]="{gt5: server > 4 }"
@@ -29,7 +38,4 @@
 
 <p>{{ serverTextAdded }}</p>
 <p>server: {{ serverCount }}</p>
-<p *ngIf="!allowNewServer; else buttonEnabledText">button disabled</p>
-<ng-template #buttonEnabledText>
-  <p>button enabled</p>
-</ng-template>
+<hr>
